# AI-APK-Generation

./: README.md
ai-service/: Dockerfile  empty_files.txt  find_password.py  fix-password.ps1  inspect_config.py  pyproject.toml  test_db_connection.py  verify_fix.py
ai-service/app/: config.py
ai-service/app/core/: celery_app.py  database.py  tasks.py
ai-service/app/core/messaging_backends/: celery_backend.py
ai-service/app/llm/: llama3_provider.py  prompt_manager.py
ai-service/app/models/prompts/: __init__.py  templates.py
ai-service/app/models/schemas/: blockly.py  context.py  input_output.py  validation.py
ai-service/app/services/: pipeline.py  pipeline_integration.py  state_resolver.py
ai-service/app/services/analysis/: context_builder.py  intent_analyzer.py  tier_llama3.py
ai-service/app/services/generation/: __init__.py  architecture_generator.py  architecture_validator.py  blockly_generator.py  layout_generator.py
infrastructure/: docker-compose.infra.yml  docker-compose.yml
infrastructure/init-scripts/: db_init.py
