[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI-powered mobile app generation service"
authors = ["Abelti Beshana <obsidian.being.tech@gmail.com>"]
readme = "README.md"
packages = [{ include = "ai_service" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

# Messaging & Caching
aio-pika = "^9.5.3"
redis = { extras = ["hiredis"], version = "^5.2.1" }
pika = "^1.3.2"

# Database
asyncpg = "^0.30.0"

# Data Validation & Settings
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"

# HTTP / Networking (used for LLaMA 3 inference calls)
httpx = "^0.28.1"
aiohttp = "^3.13.3"
requests = "^2.32.5"

# Utilities
loguru = "^0.7.3"
tenacity = "^9.0.0"
python-multipart = "^0.0.20"
rich = "^14.2.0"
tabulate = "^0.9.0"
rapidfuzz = "^3.14.3"

# Monitoring & Logging
prometheus-client = "^0.21.1"
python-json-logger = "^2.0.7"
celery = "^5.6.2"
python-dotenv = "^1.2.1"
kombu = "^5.6.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"
faker = "^33.3.0"

# Code Quality
black = "^24.10.0"
ruff = "^0.9.1"
mypy = "^1.14.1"
pre-commit = "^4.0.1"

# Development Tools
ipython = "^8.31.0"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
